--- a/server/.env.example
+++ b/server/.env.example
@@ -3,9 +3,12 @@ SUPABASE_URL=your_supabase_project_url
 SUPABASE_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_KEY=your_supabase_service_role_key  # Required for database initialization
 
-# Database Connection (optional, for direct psql access)
-# DATABASE_URL=postgresql://postgres:your_password@db.your-supabase-project.supabase.co:5432/postgres
-
-# Server Configuration
+# Server
 PORT=5000
 NODE_ENV=development
+
+# File Uploads (in bytes)
+MAX_FILE_SIZE=10485760 # 10MB
+
+# CORS (comma-separated origins)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000
