--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "@supabase/supabase-js": "^2.21.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
