--- a/server/.env.example
+++ b/server/.env.example
@@ -1,14 +1,38 @@
-# Supabase Configuration
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_KEY=your_supabase_anon_key
+# ===== Supabase Configuration =====
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 SUPABASE_SERVICE_KEY=your_supabase_service_role_key  # Required for database initialization
 
-# Server
+# ===== Server Configuration =====
 PORT=5000
 NODE_ENV=development
 
-# File Uploads (in bytes)
-MAX_FILE_SIZE=10485760 # 10MB
+# ===== API Configuration =====
+# Base URL for your API (without trailing slash)
+API_BASE_URL=http://localhost:5000
 
-# CORS (comma-separated origins)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000
+# ===== Frontend Configuration =====
+# Public URL of your frontend application (used for CORS and email links)
+FRONTEND_URL=http://localhost:3000
+
+# ===== File Uploads =====
+# Maximum file size in bytes (10MB)
+MAX_FILE_SIZE=10485760
+
+# ===== CORS Configuration =====
+# Comma-separated list of allowed origins (no spaces after commas)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000,http://localhost:8080,https://people-ai-new.vercel.app,https://people-ai-new.onrender.com
+
+# ===== Environment-Specific Overrides =====
+# Uncomment and set these for production
+# NODE_ENV=production
+# API_BASE_URL=https://your-api-domain.com
+# FRONTEND_URL=https://your-frontend-domain.com
+
+# ===== Session & Security =====
+# Session secret (generate a strong random string)
+SESSION_SECRET=your_session_secret_here
+
+# ===== Rate Limiting =====
+# Requests per window (in ms)
+RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
+RATE_LIMIT_MAX_REQUESTS=100  # Max requests per window per IP
