--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^2.0.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
